# Gameboy_Emulator

./: .clang-format  .gitignore  CMakeLists.txt  README.md  run_test.sh
ROM/: README.md
cartridge/: cartridge.cpp  cartridge.hpp
cpu/: condition.hpp  cpu.cpp  cpu.hpp  cycles.hpp  interrupts.hpp  opcode_cycles.hpp  opcode_handler.cpp  opcode_handler.hpp  opcode_helpers.cpp  opcode_map.cpp  opcode_names.hpp  rst.hpp
lib/: config.hpp  gameboy.cpp  gameboy.hpp  memory_controller.cpp  memory_controller.hpp  sdl_ui.cpp  sdl_ui.hpp  sdl_ui_debugger.cpp  sdl_ui_debugger.hpp
main/: main.cpp
mem/: boot_rom.h  mem.h  memory_controller.cpp  memory_controller.hpp
peripheral/: input.cpp  input.hpp  serial.cpp  serial.hpp  timer.cpp  timer.hpp
utils/: common.cpp  common.hpp  files.cpp  files.hpp  log.cpp  log.hpp  register.cpp  register.hpp
video/: framebuffer.cpp  framebuffer.hpp  lcd_controller.cpp  lcd_controller.hpp  ppu.cpp  ppu.hpp  sprite_renderer.cpp  sprite_renderer.hpp  tile_renderer.cpp  tile_renderer.hpp
